feat(marc_export): Batch process ids in getAffectedBibIdsForAuth